# ikaros

./: .gitignore
Examples/Robots/: test_faceInfo.ikc
Source/UserModules/FaceInfo/head-pose-estimation/: CMakeLists.txt  CRTree.cpp  config.txt  main.cpp
Source/UserModules/FaceInfo/head-pose-estimation/demo/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp  vector_fixed.hpp
Source/UserModules/FaceInfo/head-pose-estimation/demo/head_pose_estimation_demo.dir/: link.txt
Source/UserModules/FaceInfo/head-pose-estimation/demo/head_pose_estimation_demo/head_pose_estimation_demo.xcodeproj/: project.pbxproj
Source/UserModules/FaceInfo/head-pose-estimation/demo/head_pose_estimation_demo/head_pose_estimation_demo.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Source/UserModules/FaceInfo/head-pose-estimation/demo/head_pose_estimation_demo/head_pose_estimation_demo.xcodeproj/project.xcworkspace/xcshareddata/: head_pose_estimation_demo.xccheckout
Source/UserModules/FaceInfo/head-pose-estimation/demo/head_pose_estimation_demo/head_pose_estimation_demo.xcodeproj/project.xcworkspace/xcuserdata/tobbe.xcuserdatad/: UserInterfaceState.xcuserstate
Source/UserModules/FaceInfo/head-pose-estimation/demo/head_pose_estimation_demo/head_pose_estimation_demo.xcodeproj/xcuserdata/tobbe.xcuserdatad/xcschemes/: head_pose_estimation_demo.xcscheme  xcschememanagement.plist
Source/UserModules/FaceInfo/head-pose-estimation/pd/list-abs/examples/.svn/: wc.db
Source/UserModules/FaceInfo/head-pose-estimation/pix_head_pose_estimation/: Makefile
(+91 files in other folders)
